gcc/testsuite/gdc.test/runnable/imports/test11931c.d
module imports.test11931c;

import imports.test11931a;
