gcc/testsuite/gdc.test/fail_compilation/imports/ice11513x.d
module ice11513a.imports;
